--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,4 @@
 en:
-
   layouts:
     application:
       title:       "Pragmatic Bookshelf"
@@ -7,4 +6,7 @@ en:
       questions:   "Questions"
       news:        "News"
       contact:     "Contact"
-
+  store:
+    index:
+      title_html:  "Your Pragmatic Catalog"
+      add_html:    "Add to Cart"
