--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,4 +1,36 @@
+#START:layout
+#START:main
+#START:cart
+#START:currency
+#START:checkout
+#START:flash
 en:
+
+#END:cart
+#END:checkout
+#END:flash
+#END:main
+#END:layout
+  number:
+    currency:
+      format:
+        unit:      "$"
+        precision: 2
+        separator: "."
+        delimiter: ","
+        format:    "%u%n"
+#END:currency
+
+#START:errors
+  errors:
+    template:
+      body:        "There were problems with the following fields:"
+      header:       
+        one:       "1 error prohibited this %{model} from being saved"
+        other:     "%{count} errors prohibited this %{model} from being saved"
+#END:errors
+
+#START:layout
   layouts:
     application:
       title:       "Pragmatic Bookshelf"
@@ -6,16 +38,24 @@ en:
       questions:   "Questions"
       news:        "News"
       contact:     "Contact"
-  store:
-    index:
-      title_html:  "Your Pragmatic Catalog"
-      add_html:    "Add to Cart"
+#END:layout
+
+#START:cart
   carts:
     cart:
       title:       "Your Cart"
       empty:       "Empty cart"
       checkout:    "Checkout"
+#END:cart
 
+#START:main
+  store:
+    index:
+      title_html:  "Your Pragmatic Catalog"
+      add_html:    "Add to Cart"
+#END:main
+
+#START:checkout
   orders:
     new:
       legend:       "Please Enter Your Details"
@@ -26,16 +66,8 @@ en:
       pay_type:     "Pay with"
       pay_prompt_html: "Select a payment method"
       submit:       "Place Order"
+#END:checkout
 
-
-  number:
-    currency:
-      format:
-        unit:      "$"
-        precision: 2
-        separator: "."
-        delimiter: ","
-        format:    "%u%n"
-
-
+#START:flash
   thanks:          "Thank you for your order"
+#END:flash
