--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,33 +1,20 @@
+#START:layout
+#START:main
+#START:cart
+#START:currency
+#START:checkout
+#START:errors
+#START:model
+#START:flash
 es:
-  layouts:
-    application:
-      title:       "Publicaciones de Pragmatic"
-      home:        "Inicio"
-      questions:   "Preguntas"
-      news:        "Noticias"
-      contact:     "Contacto"
-  store:
-    index:
-      title_html:  "Su Cat&aacute;logo de Pragmatic"
-      add_html:    "A&ntilde;adir al Carrito"
-  carts:
-    cart:
-      title:       "Carrito de la Compra"
-      empty:       "Vaciar Carrito"
-      checkout:    "Comprar"
 
-  orders:
-    new:
-      legend:       "Por favor, introduzca sus datos"
-    form:
-      name:         "Nombre"
-      address_html: "Direcci&oacute;n"
-      email:        "E-mail"
-      pay_type:     "Forma de pago"
-      pay_prompt_html: "Seleccione un m&eacute;todo de pago"
-      submit:       "Realizar Pedido"
-
-
+#END:cart
+#END:flash
+#END:model
+#END:errors
+#END:checkout
+#END:main
+#END:layout
   number:
     currency:
       format:
@@ -36,9 +23,12 @@ es:
         separator: ","
         delimiter: "."
         format:    "%n&nbsp;%u"
+#END:currency
 
-
+#START:model
+#START:errors
   activerecord:
+#END:errors
     models:
       order:       "pedido"
     attributes:
@@ -47,6 +37,8 @@ es:
         name:      "Nombre"
         email:     "E-mail"
         pay_type:  "Forma de pago"
+#END:model
+#START:errors
     errors:
       messages:
         inclusion: "no est&aacute; incluido en la lista"
@@ -57,5 +49,46 @@ es:
       header:
         one:       "1 error ha impedido que este %{model} se guarde"
         other:     "%{count} errores han impedido que este %{model} se guarde"
+#END:errors
 
+#START:layout
+  layouts:
+    application:
+      title:       "Publicaciones de Pragmatic"
+      home:        "Inicio"
+      questions:   "Preguntas"
+      news:        "Noticias"
+      contact:     "Contacto"
+#END:layout
+
+#START:cart
+  carts:
+    cart:
+      title:       "Carrito de la Compra"
+      empty:       "Vaciar Carrito"
+      checkout:    "Comprar"
+#END:cart
+
+#START:main
+  store:
+    index:
+      title_html:  "Su Cat&aacute;logo de Pragmatic"
+      add_html:    "A&ntilde;adir al Carrito"
+#END:main
+
+#START:checkout
+  orders:
+    new:
+      legend:       "Por favor, introduzca sus datos"
+    form:
+      name:         "Nombre"
+      address_html: "Direcci&oacute;n"
+      email:        "E-mail"
+      pay_type:     "Forma de pago"
+      pay_prompt_html: "Seleccione un m&eacute;todo de pago"
+      submit:       "Realizar Pedido"
+#END:checkout
+
+#START:flash
   thanks:          "Gracias por su pedido"
+#END:flash
